trying to remove data remote

--- a/SVM_PCA InceptionV3.ipynb
+++ b/SVM_PCA InceptionV3.ipynb
@@ -3636,7 +3636,10 @@
       "[Parallel(n_jobs=-1)]: Done  87 tasks      | elapsed: 99.5min\n",
       "[Parallel(n_jobs=-1)]: Done  88 tasks      | elapsed: 100.4min\n",
       "[Parallel(n_jobs=-1)]: Done  89 tasks      | elapsed: 100.6min\n",
-      "[Parallel(n_jobs=-1)]: Done  90 tasks      | elapsed: 102.3min\n"
+      "[Parallel(n_jobs=-1)]: Done  90 tasks      | elapsed: 102.3min\n",
+      "[Parallel(n_jobs=-1)]: Done  91 tasks      | elapsed: 102.4min\n",
+      "[Parallel(n_jobs=-1)]: Done  92 tasks      | elapsed: 103.4min\n",
+      "[Parallel(n_jobs=-1)]: Done  93 tasks      | elapsed: 103.6min\n"
      ]
     }
    ],
