--- a/SVM_PCA InceptionV3.ipynb
+++ b/SVM_PCA InceptionV3.ipynb
@@ -3528,10 +3528,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-08T05:54:58.364Z"
+     "end_time": "2019-04-08T07:52:53.316665Z",
+     "start_time": "2019-04-08T05:55:29.204705Z"
     }
    },
    "outputs": [
@@ -3639,8 +3640,28 @@
       "[Parallel(n_jobs=-1)]: Done  90 tasks      | elapsed: 102.3min\n",
       "[Parallel(n_jobs=-1)]: Done  91 tasks      | elapsed: 102.4min\n",
       "[Parallel(n_jobs=-1)]: Done  92 tasks      | elapsed: 103.4min\n",
-      "[Parallel(n_jobs=-1)]: Done  93 tasks      | elapsed: 103.6min\n"
+      "[Parallel(n_jobs=-1)]: Done  93 tasks      | elapsed: 103.6min\n",
+      "[Parallel(n_jobs=-1)]: Done  97 out of 100 | elapsed: 110.9min remaining:  3.4min\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed: 115.2min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "       estimator=SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "  shrinking=True, tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=-1,\n",
+       "       param_grid={'C': [0.01, 0.1, 1, 10, 100], 'kernel': ('linear', 'rbf'), 'gamma': [0.0001, 0.001]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "       scoring=None, verbose=30)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3807,13 +3828,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-08T05:54:08.978Z"
+     "end_time": "2019-04-08T08:06:16.813844Z",
+     "start_time": "2019-04-08T08:06:16.807133Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameter (CV score=0.674):\n",
+      "{'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Best parameter (CV score=%0.3f):\" % clf.best_score_)\n",
     "print(clf.best_params_)"
