A good saturday's work

--- a/docs/content/bibliography.bib
+++ b/docs/content/bibliography.bib
@@ -4,42 +4,6 @@
   note = {Accessed: 2018-11-16}
 }
 
-@misc{time,
-  title = {\texttt{time}, {Time access and conversions Python 3}},
-  url = {https://docs.python.org/3/library/time.html},
-  note = {Accessed: 2018-11-16}
-}
-
-@misc{perc,
-  title = {{Neural Networks and Deep Learning}, {Determination Press}},
-  author= {Michael Nielsen},
-  year = {2015}
-}
-
-@misc{ORL,
-  title = {\texttt{ORL Database}, {AT\&T Laboratory Cambridge}},
-  url = { https://www.cl.cam.ac.uk/research/dtg/attarchive/facedatabase.html },
-  note =  {Accessed: 2018-11-16}
-}
-
-@misc{MNIST,
-  title = {\texttt{MNIST Database}, {Courant Institute, NYU}},
-  url = { http://yann.lecun.com/exdb/mnist/ },
-  note = { Accessed: 2018-11-16 }
-}
-
-@misc{COCO,
-  title = {\texttt{COCO Database}, {COCO Consortium}},
-  url = {http://cocodataset.org/#home},
-  note = { Accessed: 2018-12-8}
-}
-
-@misc{NCC,
-  title = {Nearest Centroid Classifier, {Wikipedia}},
-  url = {https://en.wikipedia.org/wiki/Nearest_centroid_classifier},
-  note = {Accessed: 2018-11-16}
-}
-
 @misc{AIML,
  author = {Alexandros Iosifidis},
  title = {Course notes: Introduction to Machine Learning},
@@ -47,24 +11,23 @@
  howpublished = {Blackboard},
 }
 
-@misc{KNNC,
-  title = {K-Nearest Neighbor Classifier, {Wikipedia}},
-  url = {https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm},
-  note = {Accessed: 2018-11-16}
-}
-
-@misc{KMC,
-  title = {K-Means Clustering, {Wikipedia}},
-  url = {https://en.wikipedia.org/wiki/K-means_clustering},
-  note = {Accessed: 2018-11-16}
-}
-
-@misc{PBP,
-  title = {Perceptron using Back-propagation, {University of Sydney}},
-  author = {Anthony J. Papagelis and Dong Soo Kim},
-  url = {https://www.cse.unsw.edu.au/~cs9417ml/MLP2/},
-  note = {Accessed: 2018-11-16}
-}
+@article{Bergstra,
+ author = {Bergstra, James and Bengio, Yoshua},
+ title = {Random Search for Hyper-parameter Optimization},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {January 2012},
+ volume = {13},
+ number = {1},
+ month = feb,
+ year = {2012},
+ issn = {1532-4435},
+ pages = {281--305},
+ numpages = {25},
+ url = {http://dl.acm.org/citation.cfm?id=2503308.2188395},
+ acmid = {2188395},
+ publisher = {JMLR.org},
+ keywords = {deep learning, global optimization, model selection, neural networks, response surface modeling},
+} 
 
 @article{UN,
   title = {Transforming our world : the 2030 Agenda for Sustainable Development },
@@ -80,6 +43,8 @@
   journal={Finnish Environment Institute}, 
   author={Meissner, Kristian}
 }
+
+@misc{finbenthic, title={FIN-Benthic}, url={https://etsin.avointiede.fi/dataset/urn-nbn-fi-csc-kata20170615175247247938}, journal={Etsin}, author={Meissner, Kristian}}
 
 @inproceedings{Krizhevsky:2012,
  author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
