--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -1,5 +1,5 @@
-Life below water is a critical ecosystem, that experiences a lot of challenging changes, which is way it has found its way to the UN Sustainable Goals \cite{UN}. The Finnish Environment Institute \cite{meissner} SYKE claims, that the loss of aquatic biodiversity and associated Ecosystem Services is one of the most pressing problems on Earth. The DETECT project aims to identify the various species of aquatic macroinvertebrates by imagery and classification using computer vision and machine learning. \\
+Life below water is a critical ecosystem, that experiences a lot of challenging changes. It so important a challenge, that it has found its' way to the UN Sustainable Goals \cite{UN}. The Finnish Environment Institute \cite{meissner} SYKE claims, that the loss of aquatic biodiversity and associated Ecosystem Services is one of the most pressing problems on Earth. SYKE launched the DETECT project \cite{DETECT}, which aims to identify the various species of aquatic macroinvertebrates by imagery and classification using computer vision and machine learning. \\
 
-This paper is a part of the Computer Vision and Machine Learning course at Aarhus University. It documnets my work on solving th in-class Kaggle Challenge. The aim of the Kaggle challenge is improving the classification accuracy of classifiyng the 29 classes of aquaitc macroinvertebrates. Machine Learning and state-of-the-art Deep Learning approaches utilizing Convolutional Neural Networks, are used to examine the different methods and get hand-on experience with a real classification challenge. \\
+This paper is a part of the Computer Vision and Machine Learning course at Aarhus University. It documnets my work on solving the in-class Kaggle Challenge. The aim of the Kaggle challenge is improving the classification accuracy of classifiyng the 29 classes of aquaitc macroinvertebrates. Machine Learning and state-of-the-art Deep Learning approaches utilizing Convolutional Neural Networks, are used to examine the different methods and get hand-on experience with a real classification challenge. \\
 
 The rest of the paper is structured as follows; section \ref{sec:dataset} desribes the data set in more depth and how the structure specific structure of the dataset have been used to improve the accuracy. Section \ref{sec:methods} describes the machine learning and deep learning methods used in the project. Section \ref{sec:results} describes and discusses the results obtained from applying the methods. Section \ref{sec:discussion} is a discussion of the overall results and lastly in section \ref{sec:conclusion} the project is concluded upon.
