--- a/docs/content/bibliography.bib
+++ b/docs/content/bibliography.bib
@@ -69,3 +69,81 @@
   title = {Rethinking the Inception Architecture for Computer Vision},
   doi = {10.1109/CVPR.2016.308}
 }
+
+@INPROCEEDINGS{DETECT, 
+author={E. {Riabchenko} and K. {Meissner} and I. {Ahmad} and A. {Iosifidis} and V. {Tirronen} and M. {Gabbouj} and S. {Kiranyaz}}, 
+booktitle={2016 23rd International Conference on Pattern Recognition (ICPR)}, 
+title={Learned vs. engineered features for fine-grained classification of aquatic macroinvertebrates}, 
+year={2016}, 
+volume={}, 
+number={}, 
+pages={2276-2281}, 
+keywords={aquaculture;biology computing;feedforward neural nets;learning (artificial intelligence);pattern classification;engineered features;aquatic macroinvertebrate biomonitoring;anthropogenic changes;quality indices;ecological status;aquatic ecosystem;human taxa identification accuracy;automatic fine-grained classification;convolutional neural networks;CNN;macroinvertebrate classification;hand-crafted features;learned deep features;Feature extraction;Ecosystems;Water resources;Machine vision;Microscopy;Databases}, 
+doi={10.1109/ICPR.2016.7899975}, 
+ISSN={}, 
+month={Dec},}
+
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+
+@INPROCEEDINGS{Boser,
+    author = {Bernhard E. Boser and Isabelle M. Guyon and Vladimir N. Vapnik},
+    title = {A Training Algorithm for Optimal Margin Classifiers},
+    booktitle = {Proceedings of the 5th Annual ACM Workshop on Computational Learning Theory},
+    year = {1992},
+    pages = {144--152},
+    publisher = {ACM Press}
+}
+
+@article{Vapnik,
+ author = {Cortes, Corinna and Vapnik, Vladimir},
+ title = {Support-Vector Networks},
+ journal = {Mach. Learn.},
+ issue_date = {Sept. 1995},
+ volume = {20},
+ number = {3},
+ month = sep,
+ year = {1995},
+ issn = {0885-6125},
+ pages = {273--297},
+ numpages = {25},
+ url = {https://doi.org/10.1023/A:1022627411411},
+ doi = {10.1023/A:1022627411411},
+ acmid = {218929},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {efficient learning algorithms, neural networks, pattern recognition, polynomial classifiers, radial basis function classifiers},
+}
+
+
+@book{IR,
+ author = {Manning, Christopher D. and Raghavan, Prabhakar and Sch\"{u}tze, Hinrich},
+ title = {Introduction to Information Retrieval},
+ year = {2008},
+ isbn = {0521865719, 9780521865715},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
+@ARTICLE{Perceptron,
+    author = {F. Rosenblatt},
+    title = {The Perceptron: A Probabilistic Model for Information Storage and Organization in The Brain},
+    journal = {Psychological Review},
+    year = {1958},
+    pages = {65--386}
+}
+
+@misc{karpathy, title={Image Classification}, url={http://cs231n.github.io/classification/#knn}, journal={CS231n Convolutional Neural Networks for Visual Recognition}, author={Karpathy, Andrej}}
+
+@article{Alexey,
+author = {G. Ivakhnenko, A and G. Lapa, V},
+year = {1966},
+month = {04},
+pages = {250},
+title = {CYBERNETIC PREDICTING DEVICES}
+}
